--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.3.3",
     "babel-plugin-styled-components": "^2.1.4",
     "i": "^0.3.7",
+    "lottie-react": "^2.4.0",
     "npm": "^10.6.0",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
