--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@types/react-dom": "^18.2.12",
     "@types/react-router-dom": "^5.3.3",
     "babel-plugin-styled-components": "^2.1.4",
+    "i": "^0.3.7",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
