--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-onesignal": "^3.0.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.5.3",
