--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "gh-pages": "^6.1.1",
     "prettier": "2.8.6",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "ts-jest": "^27.1.4"
   }
 }
