--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.58",
     "@types/react": "^18.2.27",
     "@types/react-dom": "^18.2.12",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "dayjs": "^1.11.11",
     "i": "^0.3.7",
     "lottie-react": "^2.4.0",
@@ -27,20 +26,24 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.5.3",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
+    "vite": "^5.4.2",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-app-rewired start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage --watch=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -65,12 +68,16 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-time-picker": "^6.0.0",
+    "@vitest/coverage-v8": "^2.0.5",
     "babel-plugin-styled-components": "^2.1.4",
     "customize-cra": "^1.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "gh-pages": "^6.1.1",
+    "jsdom": "^25.0.0",
     "prettier": "2.8.6",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "vite-plugin-babel": "^1.2.0",
+    "vitest": "^2.0.5"
   }
 }
