--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,4 +22,4 @@ jobs:
             git status
             npm install
             npm run build
-            sudo service nginx restart
+            service nginx restart
