--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,3 +23,4 @@ jobs:
             npm install
             npm run build
             service nginx restart
+            ${{ secrets.SUDO_PASSWORD }}
