--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,5 +22,4 @@ jobs:
             git status
             npm install
             npm run build
-            sudo service nginx restart
-            ${{ secrets.SUDO_PASSWORD }}
+            service nginx restart
